FIx bug background overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1306,12 +1306,24 @@ input, select, textarea {
 	}
 
 	body {
+		/*
 		background-image: url("images/overlay.png"), url("images/bg.jpg");
 		background-repeat: repeat, no-repeat;
 		background-size: auto, 100% 100%;
 		background-attachment: fixed;
 		overflow-y: scroll;
+		*/
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		background-color: #208daf;
+		
+		background-image: url("");
+		background-repeat: no-repeat;
+		background-size: cover;
+		background-position: 50% 50%;
 	}
+
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
 			-moz-animation: none !important;
